# LGDL

./: .gitignore  AGENTS.md  CHANGELOG.md  CONVO.md  P1-1_COMPLETION_SUMMARY.md  README.md  bench_state_latency.py  demo_llm_initialization.py  out.ir.json  pyproject.toml  requirements.txt  test_medical_dialog.py  test_multiturn_e2e.py  test_phase2_real_api.py  test_real_llm.py  test_server_dialog.sh
docs/: COMPLETE_IMPLEMENTATION_SUMMARY.md  DESIGN.md  GOLDEN_TEST_BASELINE.md  MEDICAL_DIALOG_GUIDE.md  MIGRATION_MVP_TO_V1.md  MVP_TASKS.md  P0_P1_CRITICAL_FIXES.md  PER_GAME_RUNTIME_ENHANCEMENT.md  PHASE_1_COMPLETE.md  PHASE_1_REAL_API_VALIDATION.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  RUNNING_GOLDEN_TESTS.md  SLOT_FILLING.md  SLOT_FILLING_DIALOGS.md  SLOT_FILLING_FINAL_REPORT.md  SLOT_FILLING_REVIEW_IMPLEMENTATION.md  TESTING_DOMAIN_PACKS.md  V1_0_PRODUCTION_HARDENING_PLAN.md  V1_0_SLOT_FILLING_PLAN.md  V1_ROADMAP.md
examples/greeting/: game.ir.json  game.lgdl  (+1 more)
lgdl/: config.py  errors.py  metrics.py
lgdl_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: chat.py  goldens.py  run_goldens.sh
tests/: test_conformance.py  test_context_aware_matching.py  test_context_enrichment.py  test_embedding_cache.py  test_errors.py  test_learning_engine.py  test_negotiation.py  test_per_game_runtime.py  test_registry.py  test_response_parser.py  test_runtime.py  test_semantic_slots.py  test_slot_integration.py  test_slot_parsing.py  test_slots.py  test_slots_grammar.lgdl  test_state_manager.py  test_templates.py
(+63 files in other folders)
